--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit~=1.41.1
 pandas~=2.2.3
 numpy~=2.2.2
 yfinance~=0.2.52
-matplotlib
+matplotlib~=3.10.0
 plotly~=6.0.0
 scipy~=1.15.1
+seaborn~=0.13.2
